--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       property="og:image"
       content="./src/assets/favicon-96x96.png"/>
     <links></links>
-
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600,800,700"
@@ -188,12 +187,10 @@
       </div>
     </footer>
     <scripts>
-      <script src="./src/js/index.js" defer></script>
       <script src="./src/js/table-render.js" defer></script>
     </scripts>
     <autoscripts>
-      <script src="./src/js/links.js" defer></script>
-      <script src="./src/js/load-scripts.js"></script>
+      <script type="module" src="./src/js/load-scripts.js"></script>
     </autoscripts>
     <host>
       <script src="https://pingobras.glitch.me/src/js/load-host.js" defer></script>
